--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,4 @@
+li{display:block}
 #main{margin-top:20px;float:left;padding:20px}
 .search-label{padding-top:4px;float:left}
 .search-by{margin-top:5px}
