--- a/views/styles.styl
+++ b/views/styles.styl
@@ -16,11 +16,12 @@ li
 .search-by
   margin-top: 5px
 
-.results
+.search-results
   margin-top: 10px
-  .panel-heading
-    h4
-      margin: 0
+  .results
+    .panel-heading
+      h4
+        margin: 0
 
 .layout
   display: none
