filtered search works

--- a/views/index.jade
+++ b/views/index.jade
@@ -37,7 +37,7 @@ block content
           .panel-body
             h5 Start Date
             ul.start_date
-              li.facet_item.layout
+              li.facet-item.layout
                 .checkbox
                   label
                     input(type="checkbox")
@@ -46,7 +46,7 @@ block content
                     span.count (10)
             h5 Price
             ul.price
-              li.facet_item.layout
+              li.facet-item.layout
                 .checkbox
                   label
                     input(type="checkbox")
@@ -55,7 +55,7 @@ block content
                     span.count (10)
             h5 Category
             ul.categories
-              li.facet_item.layout
+              li.facet-item.layout
                 .checkbox
                   label
                     input(type="checkbox")
@@ -64,7 +64,7 @@ block content
                     span.count (10)
             h5 School
             ul.school
-              li.facet_item.layout
+              li.facet-item.layout
                 .checkbox
                   label
                     input(type="checkbox")
