--- a/views/index.jade
+++ b/views/index.jade
@@ -81,6 +81,21 @@ block content
               h5 Result One
               p.list-group-item-text
                 | Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.
+              .filters
+                p.start_date
+                  span.start_date_label Start:
+                  span &nbsp;
+                  span.start_date_value Mon 24 June
+                  span &nbsp;|&nbsp;
+                p.price 
+                  span.price_label Price:
+                  span &nbsp;
+                  span.price_value $100
+                  span &nbsp;|&nbsp;
+                p.categories
+                  span.categories_label Categories:
+                  span &nbsp;
+                  span.categories_value Biology, Physics
         .panel.panel-default.documents-results.hide
           .panel-heading
             span.badge.pull-right 10
