--- a/views/styles.styl
+++ b/views/styles.styl
@@ -1,3 +1,6 @@
+p
+  margin: 0
+
 ul
   padding: 0
 
@@ -25,3 +28,10 @@ li
 
 .layout
   display: none
+
+.list-group
+  .filters
+    font-size: 12px
+    margin-top: 5px
+  p.price, p.start_date
+    float: left
