--- a/views/styles.styl
+++ b/views/styles.styl
@@ -11,16 +11,13 @@ li
   margin-top: 20px
   float: left
   padding: 20px
+  padding-top: 10px
 
 .search-label
   padding-top: 4px
   float: left
 
-.search-by
-  margin-top: 5px
-
 .search-results
-  margin-top: 10px
   .results
     .panel-heading
       h4
@@ -35,3 +32,19 @@ li
     margin-top: 5px
   p.price, p.start_date
     float: left
+
+.search-input
+  margin-top: 7px
+  margin-right: 10px
+  float: right
+  .input-group
+    float: right
+  input#search
+    background-color: white !important
+    width: 400px
+  .input-group-addon
+    border-right: 0
+    font-size: 12px
+
+.tt-dropdown-menu
+  left: auto !important
